frontend message field draft

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -9,7 +9,8 @@
         "@schematics/angular:component": {
           "style": "scss",
           "displayBlock": true,
-          "skipTests": true
+          "skipTests": true,
+          "changeDetection": "OnPush"
         }
       },
       "root": "",
