first backend + frontend integration

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -11,6 +11,10 @@
           "displayBlock": true,
           "skipTests": true,
           "changeDetection": "OnPush"
+        },
+        "@schematics/angular:service": {
+          "skipTests": true,
+          "type": "service"
         }
       },
       "root": "",
