handle multiline responses and response generation class

--- a/backend/Backend.Infrastructure/Backend.Infrastructure.csproj
+++ b/backend/Backend.Infrastructure/Backend.Infrastructure.csproj
@@ -10,5 +10,6 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Backend.Database\Backend.Database.csproj" />
 		<ProjectReference Include="..\Backend.Models\Backend.Models.csproj" />
+		<ProjectReference Include="..\Common\Backend.Utilities\Backend.Utilities.csproj" />
 	</ItemGroup>
 </Project>
