--- a/backend/Backend.Infrastructure/Backend.Infrastructure.csproj
+++ b/backend/Backend.Infrastructure/Backend.Infrastructure.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="MediatR" Version="13.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Backend.Database\Backend.Database.csproj" />
